# Automap

./: .gitignore  CLAUDE.md  config.toml  pyproject.toml
automap/: __init__.py  animate_px.py  asset_creator.py  asset_qc.py  audio.py  balance.py  buildings2d.py  casting.py  character.py  classes.py  config.py  crumble.py  cutscenes.py  economy.py  facades.py  features.py  frames.py  gauntlet.py  genlab.py  geodata.py  ifc.py  items.py  minimap.py  npc_creator.py  osm.py  pixelart.py  placement.py  presentation.py  props2d.py  repixel.py  scene_transcriber.py  scenes.py  sequences.py  srt.py  stages.py  story.py  terrain.py  tiles2d.py  trees_px.py  ui_gate.py  (+2 more)
docs/: 2026-06-30-automap-implementation-plan.md  2026-06-30-automap-pipeline-design.md  TODO.md  capture-guide.md  character-pipeline.md  combat-trial.md  creation-architecture-primer.md  game-layer.md  platform-architecture-diagram.md  primer.md  scene-generation-primer.md  studio-org.md  vaporis-pipeline-primer.md
godot/: project.godot
identities/: entropy.json  postapo.json  vaporis.json
samples/: ATTRIBUTION.md  README.md
scripts/: 01_extract_frames.py  02_run_odm.sh  02b_fetch_geodata.py  03_mesh_to_glb.py  03b_dem_to_terrain.py  04_prepare_godot.py  05_detect_features.py  06_style_scene.py  07_publish_godot_scenes.py  08_export_ifc.py  09_replace_building.py  10_create_character.py  12_publish_game.py  13_scene_director.py  14_story_director.py  15_casting_director.py  16_systems_director.py  17_ulpc_catalog.py  18_gauntlet.py  char_photo_to_profile.py  ingest.py
tests/: test_animate_px.py  (+34 more)
(+439 files in other folders)
