[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "automap"
version = "0.1.0"
description = "Drone video -> walkable Godot scene pipeline (mesh-first, staged CLI)"
requires-python = ">=3.13"
dependencies = [
    "opencv-python>=4.10",
    "piexif>=1.1",
    "typer>=0.12",
    # terrain-first branch (stage 3b)
    "rasterio>=1.4",
    "trimesh>=4.0",
    "pillow>=10.0",
    # feature detection + presentation (stages 5-6)
    "scipy>=1.11",
    "rtree>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.hatch.build.targets.wheel]
packages = ["automap"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
